# rustproof

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: main.yml  release.yml  test.yml
src/: buffered_peekable.rs  config.rs  expander.rs  keywords.rs  lexer.rs  local_dictionary.rs  main.rs  pipeline.rs
src/expander/: camel.rs  mod.rs  pascal.rs
