[package]
name = "rustproof"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.25.3"
log = "0.4.26"
serde_json = "1.0.140"
dashmap = "6.1.0"
env_logger = "0.11.7"
ropey = "1.6.1"
