[package]
name = "rustproof"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.26"
serde_json = "1.0.140"
env_logger = "0.11.7"
tempfile = "3.19.1"
once_cell = "1.21.1"
hunspell-rs = "0.4.0"
dashmap = "6.1.0"
parking_lot = "0.12.3"
dirs = "6.0.0"
